--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.1.0",
+    "mdbvue": "^6.0.1",
     "vue": "^2.5.11",
     "vue-router": "^3.1.3"
   },
