--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,13 @@
 {
-  "presets": [
-    ["env", { "modules": false }],
-    "stage-3"
+  "presets": ["@babel/preset-env", "@babel/react"],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "pragma": "h",
+        "pragmaFrag": "Fragment"
+      }
+    ]
   ]
 }
