--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "",
   "main": "index.jsx",
   "scripts": {
+    "build": "NODE_ENV=production webpack --progress --hide-modules",
+    "deploy": "npm run build && surge dist https://mikeandsophie.com",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,22 +20,24 @@
   },
   "homepage": "https://github.com/FunCodingPanda/Tying_a_knot#readme",
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-transform-react-jsx": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.0",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.1.2",
-    "webpack": "^4.41.4",
+    "style-loader": "^1.1.3",
+    "surge": "^0.21.3",
+    "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "preact": "^10.1.1",
+    "history": "^4.10.1",
+    "preact": "^10.2.1",
     "preact-render-to-string": "^5.1.3",
     "preact-router": "^3.1.0"
   }
