--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.jsx",
   "scripts": {
     "build": "NODE_ENV=production webpack --progress --hide-modules",
-    "deploy": "npm run build && surge dist https://mikeandsophie.com",
+    "deploy": "npm run build && gh-pages -d dist",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,9 +28,9 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
-    "surge": "^0.21.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
@@ -38,7 +38,6 @@
   "dependencies": {
     "history": "^4.10.1",
     "preact": "^10.2.1",
-    "preact-render-to-string": "^5.1.3",
     "preact-router": "^3.1.0"
   }
 }
