--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.jsx",
   "scripts": {
-    "build": "NODE_ENV=production webpack --progress --hide-modules",
+    "build": "NODE_ENV=production webpack --progress --hide-modules && echo www.mikeandsophie.com > dist/CNAME",
     "deploy": "npm run build && gh-pages -d dist",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
